--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 ion-OS
+<!-- Copyright (C) 2019-2020 ion-OS
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -42,6 +42,23 @@
         android:key="quick_settings_category"
         android:title="@string/theme_qspanel_title">
 
+        <com.ion.ionizer.colorpicker.ColorPickerPreference
+            android:key="qs_bg_color"
+            android:title="@string/qs_bg_color_title"
+            settings:defaultColorValue="0xff000000"
+            android:persistent="false" />
+
+        <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
+            android:key="status_bar_custom_header"
+            android:fragment="com.ion.ionizer.fragments.QsHeader"
+            android:title="@string/status_bar_custom_header_title"
+            android:summary="@string/status_bar_custom_header_summary"
+            android:defaultValue="false" />
+
+        <PreferenceScreen
+            android:layout="@layout/ion_divider"
+            android:selectable="false" />
+
         <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
             android:key="qs_panel_alpha"
             android:title="@string/qs_panel_alpha_title"
@@ -49,12 +66,6 @@
             android:max="255"
             settings:min="0"
             android:defaultValue="255" />
-
-        <com.ion.ionizer.colorpicker.ColorPickerPreference
-            android:key="qs_bg_color"
-            android:title="@string/qs_bg_color_title"
-            settings:defaultColorValue="0xff000000"
-            android:persistent="false" />
 
         <com.ion.ionizer.preferences.SystemSettingSwitchPreference
             android:key="qs_panel_bg_use_fw"
