--- a/res/xml/ion_settings_system.xml
+++ b/res/xml/ion_settings_system.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Copyright (C) 2019 ion-OS
+<!-- Copyright (C) 2019-2020 ion-OS
 
      Licensed under the Apache License, Version 2.0 (the "License");
      you may not use this file except in compliance with the License.
@@ -38,11 +38,11 @@
         android:summary="@string/animations_summary"
         android:fragment="com.ion.ionizer.fragments.Animations"/>
 
-    <!-- Rounded Corners -->
+    <!-- Display -->
     <PreferenceScreen
          android:key="rounded_corners"
-         android:title="@string/corners_title"
-         android:summary="@string/corners_summary"
+         android:title="@string/display_title"
+         android:summary="@string/display_cat_summary"
          android:fragment="com.ion.ionizer.fragments.RoundedCornersSettings" />
 
     <!-- IME Settings -->
@@ -73,6 +73,10 @@
         android:summary="@string/allow_signature_fake_summary"
         android:defaultValue="false" />
 
+    <PreferenceScreen
+        android:layout="@layout/ion_divider"
+        android:selectable="false" />
+
     <com.ion.ionizer.preferences.SystemSettingListPreference
         android:key="screenshot_type"
         android:entries="@array/screenshot_type_entries"
@@ -80,76 +84,21 @@
         android:title="@string/screenshot_type_title"
         android:defaultValue="0" />
 
-    <PreferenceCategory
-        android:title="@string/misc_title" >
+    <!-- Misc -->
+    <Preference
+        android:key="misc_category"
+        android:title="@string/misc_title"
+        android:summary="@string/misc_summary"
+        android:fragment="com.ion.ionizer.fragments.Misc"/>
 
-        <com.ion.ionizer.preferences.SystemSettingMasterSwitchPreference
-            android:key="screen_state_toggles_enable_key"
-            android:fragment="com.ion.ionizer.fragments.ScreenStateToggles"
-            android:title="@string/screen_state_toggles_title"
-            android:summary="@string/screen_state_toggles_summary"
-            android:defaultValue="false" />
-
-        <Preference
-            android:id="@+id/alarm_blocker"
-            android:title="@string/alarm_blocker"
-            android:summary="@string/alarm_blocker_summary"
-            android:fragment="com.ion.ionizer.fragments.AlarmBlocker" />
-
-        <Preference
-            android:key="wakelock_blocker"
-            android:title="@string/wakelock_blocker_title"
-            android:summary="@string/wakelock_blocker_summary"
-            android:fragment="com.ion.ionizer.fragments.WakeLockBlocker" />
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="navigation_burnin"
-        android:title="@string/navigation_burnin_category" >
-
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="burn_in_protection"
-            android:title="@string/burn_in_protection_title"
-            android:summary="@string/burn_in_protection_summary"
-            android:defaultValue="false" />
-
-        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
-            android:key="burn_in_protection_interval"
-            android:title="@string/burn_in_protection_interval_title"
-            android:defaultValue="60"
-            android:max="90"
-            android:min="45"
-            ionionizer:units="sec"
-            android:dependency="burn_in_protection"
-            android:persistent="false" />
-    </PreferenceCategory>
-
-    <PreferenceCategory
-        android:key="aspect_ratio_category"
-        android:title="@string/aspect_ratio_category_title">
-
-        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
-            android:key="aspect_ratio_apps_enabled"
-            android:title="@string/aspect_ratio_apps_enabled_title"
-            android:summary="@string/aspect_ratio_apps_enabled_summary"
-            android:defaultValue="false" />
-
-        <com.ion.ionizer.preferences.AppMultiSelectListPreference
-            android:dependency="aspect_ratio_apps_enabled"
-            android:summary="@string/aspect_ratio_apps_list_summary"
-            android:title="@string/aspect_ratio_apps_list_title"
-            android:key="aspect_ratio_apps_list"
-            android:persistent="false" />
-
-        <com.ion.ionizer.preferences.ScrollAppsViewPreference
-            android:dependency="aspect_ratio_apps_enabled"
-            android:key="aspect_ratio_apps_list_scroller"
-            android:persistent="false"
-            android:selectable="false" />
-
-        <Preference
-            android:dependency="aspect_ratio_apps_enabled"
-            android:persistent="false"
-            android:summary="@string/aspect_ratio_apps_info" />
-    </PreferenceCategory>
+    <!-- Device ionizer -->
+    <Preference
+        android:key="device_part"
+        android:persistent="false"
+        android:title="@string/device_part_title"
+        android:summary="@string/device_part_title_summary" >
+        <intent android:action="android.intent.action.MAIN"
+            android:targetPackage="com.ion.ionizer.device"
+            android:targetClass="com.ion.ionizer.device.DeviceSettings"/>
+    </Preference>
 </PreferenceScreen>
