--- a/res/values/ion_strings.xml
+++ b/res/values/ion_strings.xml
@@ -1166,4 +1166,8 @@
     <string name="qs_datausage_disabled">Disabled</string>
     <string name="qs_datausage_daily">Daily usage</string>
     <string name="qs_datausage_monthly">Monthly usage</string>
+
+    <!-- QS blur -->
+    <string name="blur_quicksettings_title">Blur behind quick settings (beta)</string>
+    <string name="blur_quicksettings_summary">Blurs the darkened background behind quick settings</string>
 </resources>
