Introduce Adjustable Blur Intensity [2/2]
Signed-off-by: Nauval Rizky <enuma.alrizky@gmail.com>
Signed-off-by: AnkitGourav <Ankitgourav035@gmail.com>

--- a/res/xml/ion_settings_interface.xml
+++ b/res/xml/ion_settings_interface.xml
@@ -109,6 +109,16 @@
             ionionizer:units="%"
             android:defaultValue="100"
             android:dependency="qs_blur" />
+
+        <com.ion.ionizer.preferences.SystemSettingSeekBarPreference
+            android:key="qs_blur_intensity"
+            android:title="@string/qs_blur_intensity_title"
+            android:summary="@string/qs_blur_intensity_summary"
+            android:max="100"
+            settings:min="1"
+            ionionizer:units="%"
+            android:defaultValue="40"
+            android:dependency="qs_blur" />
     </PreferenceCategory>
 
     <PreferenceCategory
