--- a/res/xml/ion_settings_lockscreen.xml
+++ b/res/xml/ion_settings_lockscreen.xml
@@ -123,6 +123,13 @@
             android:summary="@string/fod_icon_picker_summary"
             android:fragment="com.ion.ionizer.fragments.FODIconPickerFragment" />
 
+        <!-- FOD recognizing animation -->
+        <com.ion.ionizer.preferences.SystemSettingSwitchPreference
+            android:key="fod_recognizing_animation"
+            android:title="@string/fod_recog_animation"
+            android:summary="@string/fod_recog_animation_summary"
+            android:defaultValue="false" />
+
         <PreferenceScreen
             android:layout="@layout/ion_divider"
             android:selectable="false" />
